--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
         let inviteImage = document.getElementById('invite-image');
         let arrowRight = document.getElementById('arrow-right');
         let clickCount = 0;
-        let pauseTimes = [3,6.47,7.6,11];
+        let pauseTimes = [3.267,6.969,7.707,11.230];
         let initialClick = true;
 
         // Définir la vidéo de la carte en fonction de l'appareil
@@ -212,7 +212,7 @@
             if (isIOS()) {
                 cardVideo.src = "card_animationios.mp4";
                 cardVideo.type = "video/mp4";
-                pauseTimes = [3, 6, 7, 10.5]; // Timeline spécifique pour iPhone
+                pauseTimes = [3.133,6.8,7.567,10.967]; // Timeline spécifique pour iPhone
             } else {
                 cardVideo.src = "card_animation.webm";
                 cardVideo.type = "video/webm";
